# hs-exchange-reader

./: .dockerignore  .gitignore  Dockerfile  README.md  constants.py  database.py  pyproject.toml  requirements.txt  scheduler.py
.woodpecker/: production.yml  staging.yml
databases/mysql/: __init__.py  models.py
exchanges/: _base_.py
exchanges/aster/: __init__.py
exchanges/binance/: __init__.py
exchanges/bitget/: __init__.py
exchanges/bitmart/: __init__.py
exchanges/bybit/: __init__.py
exchanges/coinbase/: __init__.py
exchanges/gate/: __init__.py
exchanges/kraken/: __init__.py
exchanges/mexc/: __init__.py
exchanges/okx/: __init__.py
exchanges/woox/: __init__.py
jobs/: sync_klines.py  sync_symbols.py
src/: deploy.py  main.py
src/databases/doris/: __init__.py
src/databases/mysql/: __init__.py
src/exchanges/: _base_.py
src/exchanges/binance/: perp.py
src/exchanges/bitget/: perp.py
src/exchanges/bybit/: perp.py
src/exchanges/okx/: perp.py
src/flows/: constants.py  sync_cex_inflow.py  sync_funding_rate.py  sync_kalshi.py  sync_long_short_ratio.py  sync_macro_indicators.py  sync_onchain_tx.py  sync_symbols.py  utils.py
src/jobs/: sync_funding_rate.py  sync_klines.py  sync_long_short_ratio.py  sync_macro_indicators.py  sync_onchain_tx.py  sync_symbols.py
src/macro_markets/: macro_indicators.py
src/utils/: http_session.py  logger.py  prefect_decorators.py
utils/: __init__.py
